added alert-flash class

--- a/app/assets/stylesheets/_utilities.scss
+++ b/app/assets/stylesheets/_utilities.scss
@@ -136,9 +136,18 @@
   max-width: 600px;
 }
 
-.span5 { max-width: 420px; }
-.span6 { max-width: 480px; }
-.span9 { max-width: 720px; }
+.span1 { max-width: 90px }
+.span2 { max-width: 180px }
+.span3 { max-width: 270px }
+.span4 { max-width: 360px }
+.span5 { max-width: 450px; }
+.span6 { max-width: 540px; }
+.span7 { max-width: 630px; }
+.span8 { max-width: 720px; }
+.span9 { max-width: 810px; }
+.span10 { max-width: 900px; }
+.span11 { max-width: 990px; }
+.span12 { max-width: 1080px; }
 
 .gen-inline-top {
   display: inline-block;
