--- a/app/assets/stylesheets/base/_css_reset.scss
+++ b/app/assets/stylesheets/base/_css_reset.scss
@@ -12,6 +12,8 @@ html, body, div, span, object, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, ab
 }
 
 h1, h2, h3, h4, h5, h6 { font-weight: normal; line-height: 100%; }
+h1.SSS, h2.SSS, h3.SSS, h4.SSS, h5.SSS, h6.SSS { margin-bottom: 5px; }
+
 small { color: #666; }
 
 
@@ -19,7 +21,7 @@ ol > * {
   display: inline-block;
 }
 
-ol li {
+ol > li {
   display: inline-block;
   &:not(:last-child) { margin-right: 10px; }
 } //why not
