--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -223,7 +223,7 @@
         <div class="row-new"> <div class="column one black text-white">column one black text-white</div> </div>
         <div class="row-new"> <div class="column two black text-white pad-sml">column two pad-sml</div> </div>
         <div class="row-new"> <div class="column three black text-white">column three</div> </div>
-        <div class="row-new"> <div class="column four black text-white">column four (this is one third)</div> </div>
+        <div class="row-new"> <div class="column four black text-white darkseagreen">column four darkseagreen (this is one third)</div> </div>
         <div class="row-new"> <div class="column five black text-white">column five</div> </div>
         <div class="row-new"> <div class="column six black text-white pad-lrg">column six alpha-class pad-lrg</div> </div>
         <div class="row-new"> <div class="column seven red text-white">column seven red</div> </div>
