--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -143,7 +143,7 @@
 
     </div>
 
-    <div class="current-order-error" style="display:none;">Come on! You have to order something!</div>
+    <div class="current-order-error flash-alert slow" style="display:none;">Come on! You have to order something!</div>
 
   </div>
 
