--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,12 +73,12 @@
 			</div>
 		</div> <!--ENDS TOPBAR-->
 
-		<div class="flash"> 
+		<div class="flash-wrap">
 			<% if flash[:notice] %>
-				<div class="notice"><%= flash[:notice] %></div>
+				<div class="flash-alert go"><%= flash[:notice] %></div>
 			<% end %>
 			<% if flash[:error] %>
-				<div class="f-error"> <%= flash[:error] %> </div>
+				<div class="flash-alert stop"> <%= flash[:error] %> </div>
 			<% end %>
 		</div>
 			
