--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -220,8 +220,16 @@
         <hr>
 
 
-        <div class="row-new"> <div class="column one black text-white">column one black text-white</div> </div>
-        <div class="row-new"> <div class="column two black text-white pad-sml">column two pad-sml</div> </div>
+        <div class="row-new">
+            <div class="column one black text-white">column one black text-white</div>
+            <div class="column eleven darkslategray text-white">column eleven darkslategray text-white</div>
+        </div>
+        <div class="row-new">
+            <div class="column two black text-white pad-sml">column two pad-sml</div>
+            <div class="column two khaki pad-sml">column two pad-sml</div>
+            <div class="column two darkslategray text-white pad">column two pad</div>
+            <div class="column two cream pad-lrg">column two pad-lrg</div>
+        </div>
         <div class="row-new"> <div class="column three black text-white">column three</div> </div>
         <div class="row-new"> <div class="column four black text-white darkseagreen">column four darkseagreen (this is one third)</div> </div>
         <div class="row-new"> <div class="column five black text-white">column five</div> </div>
@@ -229,10 +237,22 @@
         <div class="row-new"> <div class="column seven red text-white">column seven red</div> </div>
         <div class="row-new"> <div class="column eight black text-white">column eight order-mod</div> </div>
         <div class="row-new"> <div class="column nine black text-white">column nine</div> </div>
-        <div class="row-new"> <div class="column ten black text-white">column ten</div> </div>
+        <div class="row-new"> <div class="column ten black text-white text-right">column ten text-right</div> </div>
         <div class="row-new"> <div class="column eleven black text-white">column eleven</div> </div>
         <div class="row-new"> <div class="column twelve black text-red">column twelve text-red</div> </div>
 
+        <hr>
+        <span>.exanpadable and .expanded</span>
+        <li>places the icon and makes it clickable</li>
+        <li>you have to add the javascript functionality</li>
+        <li>works on multiple elements</li>
+        <hr>
+
+        <h6 class="SSS expandable">Header Style</h6>
+        <p class="expandable">Hello Paragraph</p>
+        <p class="expandable expanded">Hello Expanded Paragraph</p>
+        <h1 class="SSS expandable">Header Style</h1>
+        <a href="#" class="expandable expanded">Why not on this link too</a>
 
 
     </div>
