--- a/app/assets/stylesheets/components/the-menu.css.scss
+++ b/app/assets/stylesheets/components/the-menu.css.scss
@@ -42,4 +42,11 @@
 /* on orders new but not in the menu */
 .money-wrap {
   font-size: 16px;
+
+  @media(max-width:520px) {
+    ol li:last-child {
+      float:right;
+    }
+  }
+
 }
