--- a/app/assets/stylesheets/base/_text_presentation.scss
+++ b/app/assets/stylesheets/base/_text_presentation.scss
@@ -14,8 +14,8 @@ h2.SSS {
 
 h3.SSS {
   font-size: 1.4em;
-  background-color: #b22;
-  border-bottom: solid 2px darken(darkseagreen, 50%);
+  background-color: $red;
+  border-bottom: solid 2px darken($red, 50%);
   box-shadow:0 1px 1px rgba(0,0,0,0.05);
 
   color: $white;
