try to fix place order button and mods

--- a/app/assets/stylesheets/components/_modifiers.scss
+++ b/app/assets/stylesheets/components/_modifiers.scss
@@ -20,6 +20,7 @@
     margin: 10px 0px 9px 0px;
     border-bottom: solid 2px #666;
     position: relative;
+    width: 100%;
 
     span {
       font-family: "Damion", serif;
@@ -37,7 +38,7 @@
   .individual-mod-wrap {
     //background-color: skyblue;
     margin-bottom: 5px;
-    padding: 5px;
+    //padding: 5px;
   }
 
   ol.single-option-wrap {
