--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -126,17 +126,15 @@
 
 
 
-      <div class="actions column-mobile six">
-        <% if @owner.is_open? %>
-          <%= button_tag(type: 'submit', id:"order-submit", class: "push-btn darkslategray") do %>
-            <i class="fa fa-cutlery pad-right-sml"></i> Next
-          <% end %>
-        <% else %> 
-          <%= button_tag(type: 'submit', id:"order-submit",  class: "push-btn", :disabled => true) do %>
-            <i class="fa fa-frown-o pad-right-sml"></i> Currently Closed
-          <% end %>
+      <% if @owner.is_open? %>
+        <%= button_tag(type: 'submit', id:"order-submit", class: "column-mobile six push-btn darkslategray the-next-button") do %>
+          <i class="fa fa-cutlery pad-right-sml"></i> Next
         <% end %>
-      </div>
+      <% else %> 
+        <%= button_tag(type: 'submit', id:"order-submit",  class: "column-mobile six push-btn the-next-button", :disabled => true) do %>
+          <i class="fa fa-frown-o pad-right-sml"></i> Currently Closed
+        <% end %>
+      <% end %>
 
     </div>
 
