--- a/app/assets/stylesheets/components/_modifiers.scss
+++ b/app/assets/stylesheets/components/_modifiers.scss
@@ -39,6 +39,7 @@
     //background-color: skyblue;
     margin-bottom: 5px;
     //padding: 5px;
+    width: 100%;
   }
 
   ol.single-option-wrap {
