removed min width from row0new

--- a/app/assets/stylesheets/_grid.scss
+++ b/app/assets/stylesheets/_grid.scss
@@ -15,7 +15,12 @@
 
 
 
-.row-new { @extend .clear-fix; max-width: 1200px; min-width: 320px; margin: 0 auto; position: relative; }
+.row-new {
+  @extend .clear-fix;
+  max-width: 1200px;
+  margin: 0 auto;
+  position: relative;
+}
 .column  { float: left; position: relative; min-height: 1px;}
 .column-mobile {
   float: left; position: relative; min-height: 1px;
