--- a/app/assets/stylesheets/styles-general.css.scss
+++ b/app/assets/stylesheets/styles-general.css.scss
@@ -51,7 +51,7 @@ span.tax {
 .primary-app-content {
   margin-left: auto;
   margin-right: auto;
-  min-width: 320px;
+  //min-width: 320px;
   max-width: 660px;
 }
 
