--- a/app/assets/stylesheets/modules/buttons.css.scss
+++ b/app/assets/stylesheets/modules/buttons.css.scss
@@ -28,7 +28,7 @@
   box-shadow: 0 3px 0 #666;
   margin-right: 3px;
   margin-left: 3px;
-  //width: calc(100% - 6px);
+  width: calc(100% - 6px);
   text-transform: uppercase;
   text-align: center;
 
