--- a/app/views/application/select_stadium.html.erb
+++ b/app/views/application/select_stadium.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title do%>
-Select Your Location
+  <a href="#top_now">Select Your Location</a>
 <% end %>
 
 <div class="list-group select">
