--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,13 +102,13 @@
 	<% end %>
 
 
-	<section class="wrapper-darkseagreen" style="padding-bottom:65px;">
-		<h3 class="pad-sml text-center text-white">How It Works</h3>
+	<section class="wrapper-darkseagreen easy-123">
+		<h1 class="SSS pad-top text-center text-white">How It Works</h1>
 	
-		<div class="row-new pad-y easy-123">
+		<div class="row-new pad-y">
 			<div class="column-mobile four">
-				<h2>1. Select your location</h2>
-				<span class="i-location"></span>
+				<a href="#top_now"><h2>1. Select your location</h2>
+				<span class="i-location"></span></a>
 				<p>Order food from your current spot on your phone or laptop</p>
 			</div>
 			<div class="column-mobile four">
@@ -125,8 +125,14 @@
 
 	</section>
 
-	<footer class="popup-banner pad-y-lrg">
+	<footer class="fb">
+      <p>Follow us on Facebook.</p>
+      <div class="fb-like" data-href="https://www.facebook.com/shnackapp" data-width="100" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+      <br />
+      <a href="/users/sign_up">Hungry in a hurry? We can help ;)</a>
+    </footer>
 
+	<footer class="popup-banner pad-y-lrg">
 		<a href="/join" class="learn-more"> Want to become a part of the Shnack Community? Learn More </a>
 		<a href="#top_now" class="place-order">Return to top</a>
 	</footer>
