--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,30 +31,88 @@
         "components/*",
         "base/colors";
 
-@import "charges", "orders", "sign_in", "styles-general";
+@import "charges", "orders", "sign_in";
 @import "animate", "utilities", "custom-resizing";
 
 
-.step-style {
-  text-align: center;
-  color: $white;
-  font-family: Dosis, sans-serif;
 
-  h1 {
-    font-family: "Damion", serif;
-    font-size: 3.2em;
-    font-weight: 400;
+.sign-up-page-deal {
+  h4 {
+    background-color: $green;
+    color: $white;
+    padding: 5px;
+    margin-bottom: 0 !important;
   }
-
   p {
-    font-size: 1.5em;
-    padding: 0px 25px;
+    border-left: 2px dotted $green;
+    border-right: 2px dotted $green;
+    border-bottom: 2px dotted $green;
   }
 
-  img {
-    opacity: .9;
+  display: block;
+  position: absolute;
+  left: -210px;
+  top: 50px;
+  font-size: .8em;
+  width: 150px;
+  text-align: center;
+
+  @media (max-width: 780px) {
+    display: none;
   }
 }
+
+
+span.tax {
+  font-size: 75%;
+}
+
+
+.primary-app-content {
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 120px;
+  max-width: 660px;
+}
+
+.expandable {
+  cursor: pointer;
+
+    &:before {
+      margin-right: 10px;
+      font-family: 'FontAwesome';
+      font-weight: normal;
+      content: '\f0da';
+  }
+}
+
+
+
+table.table {
+  border-radius: 0px;
+}
+.panel {
+  border-radius: 0px;
+}
+
+
+
+
+.easy-123 {
+  h1 {
+    color: whitesmoke;
+  }
+  .column-mobile {
+    text-align: center;
+    padding: 10px;
+    color: #111;
+
+    p, h2, span { color: #383838; }
+  }
+}
+/* //#4C4951*/
+
+
 
 div.list-group.select .list-group-item  {
   border-radius: 0px;
