--- a/app/assets/stylesheets/base/_vars.scss
+++ b/app/assets/stylesheets/base/_vars.scss
@@ -14,6 +14,6 @@ $darkred: #6E0A0A;
 $lightgreen: #22BB4D;
 $darkgreen: #006E1F;
 
-$elements: base, phone, menu, topbar, user-settings;
+$elements: base, phone, menu, topbar, user-settings-dropdown;
 
 $menu-width: 640px;
