--- a/app/assets/stylesheets/modules/_alerts.scss
+++ b/app/assets/stylesheets/modules/_alerts.scss
@@ -3,13 +3,12 @@
 
 .flash-wrap {
   margin: 0px auto;
-  min-width: 320px;
-  max-width: 660px;
+  max-width: 720px;
 }
 
 .flash-alert {
-  margin: 5px 0px 3px 0px;
-  padding: 3px;
+  margin: 3px;
+  padding: 4px;
   text-align: center;
   font-weight: bold;
   font-size: 16px;
