--- a/app/assets/stylesheets/wrench.css.scss
+++ b/app/assets/stylesheets/wrench.css.scss
@@ -22,5 +22,5 @@
         "components/*",
         "base/colors";
 
-@import "charges", "orders", "sign_in", "styles-general";
+@import "charges", "orders", "sign_in";
 @import "animate", "utilities", "custom-resizing";
