--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -9,7 +9,7 @@
 
 </head>
 
-<body style="margin-top:0px;">
+<body>
     <div class="wrapper pad-lrg">
         <span>h1..6 with SSS class (the styles to switch to)</span>
         <li>margin-bottom: 5px;</li>
@@ -56,25 +56,29 @@
         <hr>
 
         <button class="action-btn">Action Button</button>
-        <button class="action-btn red">Action Button</button>
+        <button class="action-btn red">Action</button>
         <button class="action-btn brown">Action Button</button>
-        <button class="action-btn green">Action Button</button>
+        <button class="action-btn green">Action</button>
         <button class="action-btn blue">Action Button</button>
-        <button class="action-btn darkslategray">Action Button</button>
-        <button class="action-btn darkseagreen">Action Button</button>
+        <button class="action-btn darkseagreen">Action</button>
         <button class="action-btn lightgreen">Action Button</button>
-        <button class="action-btn darkgreen">Action Button</button>
+        <button class="action-btn darkgreen">Action</button>
+        <button class="action-btn lightred">Action Button</button>
+        <button class="action-btn darkred">Action</button>
 
 
         <br>
 
         <a href="#" class="action-btn">Action Anchor</a>
-        <a href="#" class="action-btn red">Action Anchor</a>
-        <a href="#" class="action-btn brown">Action Anchor</a>
-        <a href="#" class="action-btn green">Action Anchor</a>
-        <a href="#" class="action-btn blue">Action Anchor</a>
-        <a href="#" class="action-btn darkslategray">Push Anchor</a>
-
+        <a href="#" class="action-btn red">Red</a>
+        <a href="#" class="action-btn brown">Brown</a>
+        <a href="#" class="action-btn green">Green</a>
+        <a href="#" class="action-btn blue">Blue</a>
+        <a href="#" class="action-btn darkseagreen">Darkseagreen</a>
+        <a href="#" class="action-btn lightgreen">Lightgreen</a>
+        <a href="#" class="action-btn darkgreen">Darkgreen</a>
+        <a href="#" class="action-btn lightred">Lightred</a>
+        <a href="#" class="action-btn darkred">Darkred</a>
 
         <hr>
         <span>Buttons/Anchors with class push-btn</span>
@@ -86,15 +90,14 @@
                 <button class="push-btn green">Push Button</button>
                 <button class="push-btn blue">Push Button</button>
                 <button class="push-btn brown">Push Button</button>
-                <button class="push-btn darkslategray">Push Button</button>
             </section>
             <section class="column six mar-bot-children">
-                <a href="#" class="push-btn">Push Anchor</a>
-                <a href="#" class="push-btn red">Push Anchor</a>
-                <a href="#" class="push-btn green">Push Anchor</a>
-                <a href="#" class="push-btn blue">Push Anchor</a>
-                <a href="#" class="push-btn brown">Push Anchor</a>
-                <a href="#" class="push-btn darkslategray">Push Anchor</a>
+                <a href="#" class="push-btn lightgreen">Push Anchor</a>
+                <a href="#" class="push-btn darkgreen">Push Anchor</a>
+                <a href="#" class="push-btn darkseagreen">Push Anchor</a>
+                <a href="#" class="push-btn lightred">Push Anchor</a>
+                <a href="#" class="push-btn darkred">Push Anchor</a>
+
             </section> 
         </div>
         
@@ -253,6 +256,54 @@
         <p class="expandable expanded">Hello Expanded Paragraph</p>
         <h1 class="SSS expandable">Header Style</h1>
         <a href="#" class="expandable expanded">Why not on this link too</a>
+
+
+
+        <hr>
+        <span>class row-new-ib and iblock</span>
+        <li>.row-new-ib doesnt do much, but is a good wrapper</li>
+        <li>if you make iblock-mobile, make all of the row iblock-mobile</li>
+        <hr>
+
+        <div class="row-new-ib blue" style="background-color:blue;">
+            <div class="iblock-mobile six blue">Hello there</div>
+            <div class="iblock-mobile six green">Deep water</div>
+        </div>
+    
+
+        <div class="row-new-ib red" style="background-color:red;">
+            <div class="iblock three blue">11 Hello there</div>
+            <div class="iblock three green">22 Deep water</div>
+            <div class="iblock three blue">33 Hello there</div>
+            <div class="iblock three green">44 Deep water</div>
+            <div class="iblock three blue">55 Hello there</div>
+            <div class="iblock three green">66 Deep water</div>
+            <div class="iblock three blue">77 Hello there</div>
+            <div class="iblock three green">88 Deep water</div>
+        </div>
+
+        <div class="row-new-ib green" style="background-color:green;">
+            <div class="iblock three darkslategray">Hello there</div>
+            <div class="iblock two darkgreen">Deep water</div>
+            <div class="iblock-mobile five brown">Hello there</div>
+            <div class="iblock-mobile two black">Deep water</div>
+        </div>
+
+
+        <hr>
+        <hr>
+        <div class="row-new red" style="background-color:red;">
+            <div class="column-mobile blue">11 Hello there</div>
+            <div class="column-mobile green">22 Deep water</div>
+            <div class="column-mobile blue">33 Hello there</div>
+            <div class="column-mobile green">44 Deep water</div>
+            <div class="column-mobile blue">55 Hello there</div>
+            <div class="column-mobile green">66 Deep water</div>
+            <div class="column-mobile three blue">77 Hello there</div>
+            <div class="column-mobile three green">88 Deep water</div>
+        </div>
+
+
 
 
     </div>
