--- a/app/views/layouts/application0.html.erb
+++ b/app/views/layouts/application0.html.erb
@@ -35,7 +35,7 @@
 			<a href="/"><h1 class="new gen_inline shnack">Shnack</h1></a>
 
 			<% if user_signed_in? %>
-				<ul id="click_me" class="user-settings">
+				<ul id="a-dropdown" class="user-settings">
 					<li>
 						<a href="#" class="opac-fix"><%= image_tag("gear.png", alt: "settings", style: "opacity:0.4;") %></a>
 						<ul>
