--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title do%>
-  <%= @owner.name %>
+  <span class="animated tada"><%= @owner.name %></span>
 <% end %>
 
   <%= render 'form' %>
