--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -67,6 +67,11 @@ span.tax {
   font-size: 75%;
 }
 
+.a-dropdown .shnack-credit {
+  color: $green;
+  text-align: center;
+}
+
 
 .primary-app-content {
   margin-left: auto;
@@ -75,17 +80,23 @@ span.tax {
   max-width: 660px;
 }
 
+
 .expandable {
   cursor: pointer;
-
-    &:before {
-      margin-right: 10px;
-      font-family: 'FontAwesome';
-      font-weight: normal;
-      content: '\f0da';
-  }
 }
 
+.expandable:before {
+  margin-right: 10px;
+  font-family: 'FontAwesome';
+  font-weight: normal;
+  content: '\f0da';
+}
+
+.expandable.expanded:before {
+  font-family: 'FontAwesome';
+  font-weight: normal;
+  content: '\f0d7';
+}
 
 
 table.table {
@@ -108,6 +119,10 @@ table.table {
     color: #111;
 
     p, h2, span { color: #383838; }
+    h2:first-letter {
+      font-size: 1.6em;
+      color: $green;
+    }
   }
 }
 /* //#4C4951*/
@@ -172,3 +187,18 @@ div.list-group.select .list-group-item  {
     margin:auto;
   }
 }
+
+
+ .circle {
+    border: 2px solid khaki;
+    //background-color: #AAA;
+    border-radius:15px;
+    background-image: none;
+    width: 12px;
+    height: 12px;
+    margin: 0 auto;
+
+    &.current {
+      background-color: khaki;
+    }
+  }
