--- a/app/assets/stylesheets/custom-resizing.css.scss
+++ b/app/assets/stylesheets/custom-resizing.css.scss
@@ -1,10 +1,7 @@
 //all for the TOPBAR
 @media (max-width: 520px) {
-  .prgs-bar { display: block; width: 100% !important;}
-  .topbar { padding: 0 2px 4px 2px !important; }
-  .top-bar .my-gear { float: right !important;}
-  .topbar a h3 { font-size: 2.5em; }
-  .topbar .my-gear img { width: 30px; height: 30px; }
+  .topbar { padding: 1px 6px 4px !important; }
+  .topbar h1 { font-size: 2.5em; }
 }
 
 //all for easy-123
