--- a/app/assets/stylesheets/modules/_dropdown.scss
+++ b/app/assets/stylesheets/modules/_dropdown.scss
@@ -3,65 +3,55 @@
 @import "base/vars";
 
 
-#click_me {
+.a-dropdown {
   list-style:none;
   font-weight:bold;
   margin: 0;
 }
 
-#click_me li {
+.a-dropdown li {
   float:left;
-  //margin-right:10px;
   position:relative;
 }
-#click_me a {
+.a-dropdown a {
   display:block;
   padding:5px;
-  //color:#fff;
-  //background:#333;
   text-decoration:none;
 }
-#click_me a:hover {
-  //color:#fff;
-  //background:#6b0c36;
+.a-dropdown a:hover {
   text-decoration:underline;
 }
 
-#click_me ul {
+.a-dropdown ul {
   background: #CCC;
   list-style:none;
   position:absolute;
   right:-9999px; 
+  width: 200px;
   padding-left: 0px;
   box-shadow: 0 0 2px #333;
-  z-index: index($elements, user-settings);
+  z-index: index($elements, user-settings-dropdown);
 }
-#click_me ul li {
+.a-dropdown ul li {
   padding-top:1px; 
   float:none;
   padding-bottom: 1px;
 }
-#click_me ul a {
+.a-dropdown ul a {
   white-space:nowrap;
 }
-#click_me li:hover ul { 
-  right:0; 
-
-  .shnack-credit {
-    color: $green;
-    text-align: center;
-  }
+.a-dropdown li:hover ul { 
+  right:10px; 
 }
 
-#click_me li:hover a { 
-  //background: lemonchiffon;
+.a-dropdown li:hover a { 
   text-decoration:underline;
 }
-#click_me li:hover ul a { 
+.a-dropdown li:hover ul a { 
   text-decoration:none;
   color: $black;
 }
-#click_me li:hover ul li a:hover { 
+.a-dropdown li:hover ul li a:hover { 
   background:#555;
   color: whitesmoke;
 }
