--- a/app/assets/stylesheets/modules/buttons.css.scss
+++ b/app/assets/stylesheets/modules/buttons.css.scss
@@ -36,11 +36,13 @@
     top: 1px;
     box-shadow: 0 2px 0 #666;
     text-decoration:none;
+    background-color: lighten(darkslategray, 10%);
   }
 
   &:active {
     top: 3px;
     box-shadow: none;
+    background-color: lighten(darkslategray, 15%);
   }
 }
 
