--- a/app/views/orders/_display_mods.html.erb
+++ b/app/views/orders/_display_mods.html.erb
@@ -3,7 +3,7 @@
 
   <div class="row-new">
     <% item.modifiers.each do |mod| %>
-      <div class="column-mobile four individual-mod-wrap">
+      <div class="column-mobile six individual-mod-wrap">
         <div class="mod-header"><span><%= mod.name.capitalize %></span></div>
 
         <% mod.options.each_with_index do |val, ind| %>
