--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,7 +20,7 @@ Account Settings
 
 
     <h2 class="SSS pad-top">Change Password</h2>
-    <%= f.label :password %> <i> (leave blank if you don't want to change it)</i>
+    <%= f.label :new_password %> <i> (leave blank if you don't want to change it)</i>
     <%= f.password_field :password, :autocomplete => "off" %>
 
     <%= f.label :password_confirmation %>
